--- a/Day-7/pod.yaml
+++ b/Day-7/pod.yaml
@@ -6,9 +6,9 @@
 apiVersion: v1
 kind: Pod
 metadata: 
-  name: nginx-pod-d
-  labels:
-    env: demo
+  name: nginx-pod-dec
+  labels: 
+    env: dev
     type: frontend
 spec:
   containers:
@@ -16,3 +16,5 @@ spec:
       image: nginx
       ports:
         - containerPort: 80
+
+
