--- a/Day-8/replicationController.yaml
+++ b/Day-8/replicationController.yaml
@@ -1,19 +1,20 @@
-apiVersion:  v1
+apiVersion: v1
 kind:  ReplicationController
-metadata:
+metadata: 
   name: nginx-rc
   labels:
     env: dev
 spec:
+  replicas: 3
   template:
     metadata:
-      name: nginx
-      labels: 
+      labels:
         env: dev
+      name: nginx-rc
     spec:
       containers:
         - name: nginx
           image: nginx
           ports:
             - containerPort: 80
-  replicas: 3
+
